JRADEV-16229 - encoding HTML fields

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copied.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copied.vm
@@ -1,3 +1,4 @@
+#* @vtlvariable name="action" type="com.atlassian.cpji.action.CopyIssueToInstanceAction" *#
 <html>
 <body>
 
@@ -19,7 +20,7 @@
              <p>There were some problems during issue creation.</p>
              <ul>
                 #foreach( $error in $action.getErrorMessages() )
-                  <li>$error</li>
+                  <li>$textutils.htmlEncode($error)</li>
                 #end
              </ul>
             </div>
