--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/css/global.less
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/css/global.less
@@ -8,3 +8,19 @@
 	}
 
 }
+
+form.aui {
+	.field-group {
+		.field-value {
+			label {
+				float: none;
+				display: inline;
+				margin: 0 0 0 0;
+				padding-top: 0;
+				text-align: left;
+				position: inherit;
+				font-weight: normal;
+			}
+		}
+	}
+}
