JRADEV-16759: if remote JIRA doesn't support linking or attachments but the original issue have them set there will be explanatory messages set and controls will be disabled

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copydetails.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copydetails.vm
@@ -39,9 +39,10 @@
 				</div>
 			</fieldset>
 
+			#if ($action.advancedSectionVisible)
 			<h2>$i18n.getText('cpji.advanced')</h2>
 			<fieldset>
-				#if ($action.issueWithComments)
+				#if ($action.copyCommentsSectionVisible)
 				<div class="field-group" id="copy-comments-group">
 					<span class="field-value">
 						<input type="checkbox" class="checkbox" id="copy-comments" name="copyComments" value="true" checked="checked"/>
@@ -50,38 +51,36 @@
 				</div>
 				#end
 
-				#if ($action.attachmentsEnabled() && $action.issueWithAttachments)
+				#if ($action.copyAttachmentsSectionVisible)
 				<div class="field-group" id="copy-attachments-group">
-					 <span class="field-value">
-						 #if ($action.isSALUpgradeRequired())
-							 $i18n.getText('cpji.attachments.not.moved.sal')
-						 #elseif ($action.remoteAttachmentsEnabled() && $action.hasCreateAttachmentsPermission())
-							 <input type="checkbox" class="checkbox" id="attachments" name="copyAttachments" value="true" checked="checked"/>
-							 <label for="attachments">$i18n.getText('cpji.copy.attachments')</label>
-						 #elseif (!$action.remoteAttachmentsEnabled())
-							 $i18n.getText('cpji.attachments.are.disabled')
-						 #elseif(!$action.hasCreateAttachmentsPermission())
-							 $i18n.getText('cpji.not.permitted.to.create.attachments')
-						 #end
-					 </span>
-				</div>
-				#end
-
-				#if ($action.linksEnabled() && $action.issueWithLinks)
-				<div class="field-group" id="copy-issue-links-group">
-					<span class="field-value">
-						<input type="checkbox" class="checkbox" id="copy-issue-links" name="copyIssueLinks" value="true" checked="checked"/>
-						<label for="copy-issue-links">$i18n.getText('cpji.copy.issue.links')</label>
-						#if (!$action.copyInfo.issueLinkingEnabled)
-							<div class="description">$i18n.getText('cpji.remote.issue.linking.is.disabled')</div>
-						#end
+					#set ($error = $action.copyAttachmentsErrorMessage)
+					<span class="field-value #if ($error != "") disabled #end">
+						<input type="checkbox" class="checkbox" id="attachments" name="copyAttachments" value="true" #if ($error != "") disabled="" #else checked="checked" #end/>
+						<label for="attachments">$i18n.getText('cpji.copy.attachments')</label>
 					</span>
+					#if ($error)
+						<div>$error</div>
+					#end
 				</div>
 				#end
 
-				#if ($action.linksEnabled())
+				#if ($action.copyIssueLinksSectionVisible)
+				<div class="field-group" id="copy-issue-links-group">
+					#set ($error = $action.copyIssueLinksErrorMessage)
+					<span class="field-value #if ($error != "") disabled #end">
+						<input type="checkbox" class="checkbox" id="copy-issue-links" name="copyIssueLinks" value="true" #if ($error != "") disabled="" #else checked="checked" #end/>
+						<label for="copy-issue-links">$i18n.getText('cpji.copy.issue.links')</label>
+					</span>
+					#if ($error)
+						<div>$error</div>
+					#end
+				</div>
+				#end
+
+				#if ($action.createIssueLinkSectionVisible)
 				<div class="field-group" id="create-issue-links-group">
 					<label for="remoteIssueLink">$i18n.getText('cpji.create.issue.link')</label>
+
 					<select name="remoteIssueLink" id="remoteIssueLink">
 						#foreach( $issueLink in $action.getIssueLinkOptions())
 							<option value="$textutils.htmlEncode(${issueLink.value})">$textutils.htmlEncode(${issueLink.label})</option>
@@ -90,6 +89,7 @@
 				</div>
 				#end
 			</fieldset>
+			#end
 
 			<div class="button-container">
 				<div class="buttons">
