--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copydetails.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copydetails.vm
@@ -55,8 +55,8 @@
 				<div class="field-group" id="copy-attachments-group">
 					#set ($error = $action.copyAttachmentsErrorMessage)
 					<span class="field-value #if ($error != "") disabled #end">
-						<input type="checkbox" class="checkbox" id="attachments" name="copyAttachments" value="true" #if ($error != "") disabled="" #else checked="checked" #end/>
-						<label for="attachments">$i18n.getText('cpji.copy.attachments')</label>
+						<input type="checkbox" class="checkbox" id="copy-attachments" name="copyAttachments" value="true" #if ($error != "") disabled="" #else checked="checked" #end/>
+						<label for="copy-attachments">$i18n.getText('cpji.copy.attachments')</label>
 					</span>
 					#if ($error)
 						<div>$error</div>
