JRADEV-16762: fixed layout for the message that's presented to the user when she doesn't have any destination projects, also it's not a warning now but an error AUI dialog

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/selectproject.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/selectproject.vm
@@ -16,11 +16,12 @@
         <form action="SelectTargetProjectAction.jspa" class="aui" method="post">
             <h2>$i18n.getText('cpji.select.destination.project')</h2>
             <fieldset>
-				<div class="field-group" id="targetEntityLink-container">
+				<div class="field-group" id="targetEntityLink-container" data-selected-project-key="$textutils.htmlEncode($selectedIssueProjectKey)">
 					<label for="targetEntityLink">$i18n.getText('common.words.project')</label>
-					<div style="width: 250px;"><select name="targetEntityLink" id="targetEntityLink" class="hidden"></select></div>
-                    <span id="targetEntityLinkLoader" class="icon loading hidden"></span>
-                    <div class="hidden" id="cpji-current-project-key">$selectedIssueProjectKey</div>
+					<span class="field-value" style="width: 250px;">
+						<select name="targetEntityLink" id="targetEntityLink" class="hidden"></select>
+						<span id="targetEntityLinkLoader" class="icon loading hidden"></span>
+					</span>
 				</div>
             </fieldset>
             <div class="button-container">
