JRADEV-16387: changed closedsource pom version (didn't work on CI), Remote User info in Copy Details is visible only if the destination is remote

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copydetails.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copydetails.vm
@@ -27,6 +27,7 @@
 				</div>
 			</fieldset>
 
+			#if (!$action.targetLocal)
 			<h2>$i18n.getText('cpji.remote.user')</h2>
 			<fieldset>
 				<div class="field-group">
@@ -38,6 +39,7 @@
 					<span class="field-value">$textutils.htmlEncode($action.getRemoteFullUserName())</span>
 				</div>
 			</fieldset>
+			#end
 
 			#if ($action.advancedSectionVisible)
 			<h2>$i18n.getText('cpji.advanced')</h2>
