JRADEV-16387: rendering required fields that are missing (only for a local to local copy)

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/permissionchecks.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/permissionchecks.vm
@@ -58,6 +58,10 @@
                     #end
                 </tbody>
             </table>
+
+			#foreach($item in $action.fieldLayoutItems)
+				$action.getHtmlForField($item)
+			#end
         #end
         <h4 class="sub-heading">Custom fields</h4>
         #if ($action.getCustomFieldPermissions().isEmpty())
