--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/permissionchecks.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/permissionchecks.vm
@@ -1,100 +1,81 @@
 #* @vtlvariable name="action" type="com.atlassian.cpji.action.PermissionChecksAction" *#
 <html>
 <head>
-    <title>Confirm new values</title>
+    <title>$i18n.getText('cpji.confirm.new.values')</title>
 </head>
 <body>
 <div id="stepped-process" class="content-container">
     <div class="content-related">
     <ol class="steps">
-            <li class="done">Select project</li>
-            <li class="done">Select Issue Type</li>
-            <li class="current">Confirmation</li>
+            <li class="done">$i18n.getText('cpji.select.project')</li>
+            <li class="done">$i18n.getText('cpji.select.issue.type')</li>
+            <li class="current">$i18n.getText('cpji.confirmation')</li>
         </ol>
     </div>
     <div class="content-body aui-panel">
         <form #if ($action.canCopyIssue()) action="CopyIssueToInstanceAction.jspa" method="post" #else action="../browse/$action.getIssueKey()" method="get" #end class="aui" >
-        <h2>Confirm new values</h2>
-        #if(!$action.canCopyIssue())
-            <div class="aui-message error"><span class="aui-icon icon-error"></span><p>Can't copy the issue, because of the following fields.</p>
-               <ul>
-                 #foreach( $permission in $action.getSystemFieldPermissions() )
-                   #if (!$permission.canCopyIssue())<li>$textutils.htmlEncode($permission.fieldName)</li>#end
-                #end
-                #foreach( $permission in $action.getCustomFieldPermissions() )
-                    #if (!$permission.canCopyIssue())<li>$textutils.htmlEncode($permission.fieldName)</li>#end
-                #end
-               </ul>
-            </div>
-        #elseif (!$action.getSystemFieldPermissions().isEmpty() || !$action.getCustomFieldPermissions().isEmpty())
-            <div class="aui-message warning"><span class="aui-icon icon-warning"></span><p>The issue can be copied, but there are warnings related to the values of the following fields.</p>
-                <ul>
-                #foreach( $permission in $action.getSystemFieldPermissions() )
-                   <li>$textutils.htmlEncode($permission.fieldName)</li>
-                #end
-                #foreach( $permission in $action.getCustomFieldPermissions() )
-                   <li>$textutils.htmlEncode($permission.fieldName)</li>
-                #end
-                </ul>
-            </div>
-        #end
-        <h4 class="sub-heading">System fields</h4>
-        #if ($action.getSystemFieldPermissions().isEmpty())
-            <div class="aui-message info"><span class="aui-icon icon-info"></span><p>All system field values will be retained</p></div>
-        #else
-            <table class="aui" id="permission-checks">
-                <thead>
-                <tr>
-                    <th id="system-field-id">Field</th>
-                    <th id="system-field-permission">New field value</th>
-                </tr>
-                </thead>
-                <tbody>
-                    #foreach( $permission in $action.getSystemFieldPermissions() )
-                        <tr>
-                            <td headers="system-field-id" #if (!$permission.canCopyIssue()) class="status-inactive" #end>$textutils.htmlEncode($permission.fieldName)</td>
-                            <td headers="system-field-permission"> $textutils.htmlEncode($permission.getValidationMessage()) </td>
-                        </tr>
-                    #end
-                </tbody>
-            </table>
-
-			#foreach($item in $action.fieldLayoutItems)
-				$action.getHtmlForField($item)
+			<h2>$i18n.getText('cpji.confirm.new.values')</h2>
+			#if(!$action.canCopyIssue())
+				<div class="aui-message error"><span class="aui-icon icon-error"></span><p>$i18n.getText('cpji.cant.copy.issue')</p>
+				   <ul>
+					 #foreach( $permission in $action.getSystemFieldPermissions() )
+					   #if (!$permission.canCopyIssue())<li>$textutils.htmlEncode($permission.fieldName)</li>#end
+					#end
+					#foreach( $permission in $action.getCustomFieldPermissions() )
+						#if (!$permission.canCopyIssue())<li>$textutils.htmlEncode($permission.fieldName)</li>#end
+					#end
+				   </ul>
+				</div>
+			#elseif (!$action.getSystemFieldPermissions().isEmpty() || !$action.getCustomFieldPermissions().isEmpty())
+				<div class="aui-message warning"><span class="aui-icon icon-warning"></span><p>$i18n.getText('cpji.this.issue.can.be.copied')</p>
+					<ul>
+					#foreach( $permission in $action.getSystemFieldPermissions() )
+					   <li>$textutils.htmlEncode($permission.fieldName)</li>
+					#end
+					#foreach( $permission in $action.getCustomFieldPermissions() )
+					   <li>$textutils.htmlEncode($permission.fieldName)</li>
+					#end
+					</ul>
+				</div>
 			#end
-        #end
-        <h4 class="sub-heading">Custom fields</h4>
-        #if ($action.getCustomFieldPermissions().isEmpty())
-            <div class="aui-message info"><span class="aui-icon icon-info"></span><p>All custom field values will be retained</p></div>
-        #else
-            <table class="aui" id="custom-field-permission-checks">
-                <thead>
-                <tr>
-                    <th id="custom-field-id">Field</th>
-                    <th id="custom-field-permission">New field value</th>
-                </tr>
-                </thead>
-                <tbody>
-                    #foreach( $permission in $action.getCustomFieldPermissions() )
-                        <tr>
-                            <td headers="custom-field-id" #if (!$permission.canCopyIssue()) class="status-inactive" #end>$textutils.htmlEncode($permission.fieldName)</td>
-                            <td headers="custom-field-permission">$textutils.htmlEncode($permission.getValidationMessage())</td>
-                        </tr>
-                    #end
-                </tbody>
-            </table>
-        #end
+
+			<h4 class="sub-heading">$i18n.getText('cpji.system.fields')</h4>
+			#if ($action.getSystemFieldPermissions().isEmpty())
+				<div class="aui-message info"><span class="aui-icon icon-info"></span><p>$i18n.getText('cpji.all.system.fields.retained')</p></div>
+			#else
+				$i18n.getText('cpji.some.fields.are.missing') #if ($action.selectedDestinationProject.jiraLocation.local) $i18n.getText('cpji.please.set.values') #end
+
+				#foreach( $permission in $action.getSystemFieldPermissions() )
+					#parse('/com/atlassian/cpji/templates/default.html.for.field.vm')
+				#end
+
+				#foreach($item in $action.fieldLayoutItems)
+					$action.getHtmlForField($item)
+				#end
+			#end
+
+			<h4 class="sub-heading">$i18n.getText('cpji.custom.fields')</h4>
+			#if ($action.getCustomFieldPermissions().isEmpty())
+				<div class="aui-message info"><span class="aui-icon icon-info"></span><p>$i18n.getText('cpji.all.custom.fields.retained')</p></div>
+			#else
+				$i18n.getText('cpji.some.fields.are.missing')
+
+				#foreach( $permission in $action.customFieldPermissions )
+					#parse('/com/atlassian/cpji/templates/default.html.for.field.vm')
+				#end
+			#end
+
             <div class="button-container">
                 <div class="buttons">
                    #if ($action.canCopyIssue())
-                    <input type="submit" value="Copy Issue" class="button submit"/>
+                    <input type="submit" value="$i18n.getText('cpji.copy.issue')" class="button submit"/>
                    #else
-                    <input type="submit" value="Cancel" class="button submit"/>
+                    <input type="submit" value="$i18n.getText('common.forms.cancel')" class="button submit"/>
                    #end
                 </div>
             </div>
-            <input type="hidden" name="atl_token" value="$action.getXsrfToken()"/>
-            <input type="hidden" name="id" value="$action.getId()"/>
+            <input type="hidden" name="atl_token" value="$action.xsrfToken"/>
+            <input type="hidden" name="id" value="$action.id"/>
             <input type="hidden" name="targetEntityLink" value="$textutils.htmlEncode($action.targetEntityLink)"/>
             <input type="hidden" name="issueType" value="$textutils.htmlEncode($action.getIssueType())"/>
             <input type="hidden" name="copyAttachments" value="$action.copyAttachments"/>
@@ -105,7 +86,4 @@
     </div>
 </div>
 </body>
-
-
-
 </html>
